--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ a {
   text-decoration: none;
 }
 
+ul {
+  list-style: none;
+}
+
 img {
   width: 100%;
   height: auto;
@@ -39,7 +43,7 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-h1 {
+.title {
   font: 700 1.875rem 'Roboto', sans-serif;
   color: var(--title-color);
   -webkit-font-smoothing: auto;
@@ -99,18 +103,11 @@ h1 {
   background: var(--body-color);
 }
 
-nav {
-  height: var(--header-height);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-}
-
 main {
-  margin-top: var(--header-height);
+  margin-top: calc(var(--header-height) + 1rem);
 }
 
+/** LOGO  */
 .logo {
   font: 700 1.31rem 'Roboto', sans-serif;
   color: var(--title-color);
@@ -120,8 +117,95 @@ main {
   color: var(--base-color);
 }
 
-/** HOME */
 
+/** NAVIGATION  */
+nav {
+  height: var(--header-height);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+nav ul li{
+  text-align: center;
+}
+
+nav .menu {
+  opacity: 0;
+  visibility: hidden;
+}
+
+nav ul li a {
+  transition: color 0.2s;
+  position: relative;
+}
+
+nav ul li a:hover {
+  color: var(--base-color);
+}
+
+nav ul li a::after {
+  content: '';
+  width: 0%;
+  height: 2px;
+  background: var(--base-color);
+
+  position: absolute;
+  left: 0;
+  bottom: -1.5rem;
+}
+
+nav ul li a:hover::after {
+  width: 100%;
+  transition: width 0.3s;
+}
+
+/** mostrar menu  */
+nav.show .menu {
+  opacity: 1;
+  visibility: visible;
+  
+  background: var(--body-color);
+  
+  height: 100vh;
+  width: 100vw;
+  
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+nav.show .menu {
+  display: grid;
+  place-content: center;
+}
+
+nav.show ul.grid {
+  gap: 4rem;
+}
+
+/** TOGGLE MENU */
+.toggle {
+  color: var(--base-color);
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+nav .icon-close {
+  visibility: hidden;
+  opacity: 0;
+
+  position: absolute;
+  right: 1.5rem;
+}
+
+nav.show div.icon-close {
+  visibility: visible;
+  opacity: 1;
+}
+
+/** HOME */
 #home {
   overflow: hidden;
 }
@@ -161,7 +245,7 @@ main {
   text-align: center;
 }
 
-#home .text h1 {
+#home .text h2 {
   margin-bottom: 1rem;
 }
 
