--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ img {
 }
 
 /** BASE */
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font: 400 1rem 'Open Sans', sans-serif;
   color: var(--text-color);
@@ -71,8 +75,16 @@ body {
   height: 1px;
   background: linear-gradient(
     270deg,
-    hsla(var(--hue), 36%, 57%, 1) 0%, 
-    hsla(var(--hue), 65%, 88%, 1) 100%);
+    hsla(var(--hue), 36%, 57%, 1), 
+    hsla(var(--hue), 65%, 88%, 1));
+}
+/* mudando o lado do degrader */
+.divider-2 {
+  height: 1px;
+  background: linear-gradient(
+    270deg,
+    hsla(var(--hue), 65%, 88%, 1),
+    hsla(var(--hue), 36%, 57%, 1));
 }
 
 /** LAYOUT */
@@ -91,6 +103,18 @@ body {
   padding: 5rem 0;
 }
 
+.section .title {
+  margin-bottom: 1rem;
+}
+
+.section header {
+  margin-bottom: 4rem;
+}
+
+.section header p strong {
+  color: var(--base-color);
+}
+
 #header {
   border-bottom: 1px solid #e4e4e4;
   display: flex;
@@ -101,6 +125,10 @@ body {
   left: 0;
   z-index: 100;
   background: var(--body-color);
+}
+
+#header.scroll {
+  box-shadow: 0 0 12px rgba(0, 0, 0, .15);
 }
 
 main {
@@ -131,11 +159,6 @@ nav ul li{
   text-align: center;
 }
 
-nav .menu {
-  opacity: 0;
-  visibility: hidden;
-}
-
 nav ul li a {
   transition: color 0.2s;
   position: relative;
@@ -161,6 +184,18 @@ nav ul li a:hover::after {
   transition: width 0.3s;
 }
 
+nav .menu {
+  opacity: 0;
+  visibility: hidden;
+
+  top: -20rem;
+  transition: 0.2s;
+}
+
+nav .menu ul {
+  display: none;
+}
+
 /** mostrar menu  */
 nav.show .menu {
   opacity: 1;
@@ -174,11 +209,13 @@ nav.show .menu {
   position: fixed;
   top: 0;
   left: 0;
-}
 
-nav.show .menu {
   display: grid;
   place-content: center;
+}
+
+nav.show .menu ul {
+  display: grid;
 }
 
 nav.show ul.grid {
@@ -197,15 +234,19 @@ nav .icon-close {
   opacity: 0;
 
   position: absolute;
+  top: -1.5rem;
   right: 1.5rem;
+  
+  transition: 0.2s;
 }
 
 nav.show div.icon-close {
   visibility: visible;
   opacity: 1;
+  top: 1.5rem;
 }
 
-/** HOME */
+/*? HOME */
 #home {
   overflow: hidden;
 }
@@ -251,4 +292,68 @@ nav.show div.icon-close {
 
 #home .text p {
   margin-bottom: 2rem;
+}
+
+/*? ABOUT */
+#about {
+  background: #fff;
+}
+
+#about .container {
+  margin: 0;
+}
+
+#about .image {
+  position: relative;
+}
+
+#about .image::before {
+  content: '';
+  height: 100%;
+  width: 100%;
+  background: var(--base-color-second);
+  position: absolute;
+  bottom: 8.3%;
+  right: 33%;
+  z-index: 0;
+}
+
+#about .image img {
+  position: relative;
+}
+
+#about .image img,
+#about .image::before {
+  border-radius: .25rem;
+}
+
+#about .text {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
+/** SERCIVES */
+
+.cards.grid {
+  gap: 1.5rem;
+}
+
+.card {
+  padding: 3.625rem 2rem;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+  border-bottom: .25rem solid var(--base-color);
+  border-radius: .25rem .25rem 0 0;
+  text-align: center;
+}
+
+.card :first-child{
+  display: block;
+  margin-bottom: 1.5rem;
+  font-size: 5rem;
+  color: var(--base-color);
+}
+
+.card .title {
+  font-size: 1.5rem;
+  margin-bottom: 0.75rem;
 }
