--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/** RESET */
+/*? RESET */
 * {
   margin: 0;
   padding: 0;
@@ -18,7 +18,7 @@ img {
   height: auto;
 }
 
-/** VARIAVEIS  */
+/*? VARIAVEIS  */
 :root {
 
   /** sistemas de variaveis no css*/
@@ -35,7 +35,7 @@ img {
   --body-color: hsl(0 0% 98%);
 }
 
-/** BASE */
+/*? BASE */
 html {
   scroll-behavior: smooth;
 }
@@ -78,7 +78,7 @@ body {
     hsla(var(--hue), 36%, 57%, 1), 
     hsla(var(--hue), 65%, 88%, 1));
 }
-/* mudando o lado do degrader */
+/** mudando o lado do degrader */
 .divider-2 {
   height: 1px;
   background: linear-gradient(
@@ -87,7 +87,7 @@ body {
     hsla(var(--hue), 36%, 57%, 1));
 }
 
-/** LAYOUT */
+/*? LAYOUT */
 .container {
 
   margin-left: 1.5rem;
@@ -135,7 +135,7 @@ main {
   margin-top: calc(var(--header-height) + 1rem);
 }
 
-/** LOGO  */
+/*? LOGO  */
 .logo {
   font: 700 1.31rem 'Roboto', sans-serif;
   color: var(--title-color);
@@ -146,7 +146,7 @@ main {
 }
 
 
-/** NAVIGATION  */
+/*? NAVIGATION  */
 nav {
   height: var(--header-height);
   display: flex;
@@ -196,7 +196,7 @@ nav .menu ul {
   display: none;
 }
 
-/** mostrar menu  */
+/*? mostrar menu  */
 nav.show .menu {
   opacity: 1;
   visibility: visible;
@@ -222,7 +222,7 @@ nav.show ul.grid {
   gap: 4rem;
 }
 
-/** TOGGLE MENU */
+/*? TOGGLE MENU */
 .toggle {
   color: var(--base-color);
   font-size: 1.5rem;
@@ -332,7 +332,7 @@ nav.show div.icon-close {
   margin-right: 1.5rem;
 }
 
-/** SERCIVES */
+/*? SERCIVES */
 
 .cards.grid {
   gap: 1.5rem;
@@ -356,4 +356,97 @@ nav.show div.icon-close {
 .card .title {
   font-size: 1.5rem;
   margin-bottom: 0.75rem;
+}
+
+/*? TESTIMONIALS  */
+#testimonials {
+  background: #fff;
+}
+
+#testimonials .container {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+#testimonials header {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  margin-bottom: 0;
+}
+
+#testimonials blockquote {
+  padding: 2rem;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+  border-radius: .25rem;
+}
+
+#testimonials blockquote p {
+  position: relative;
+  text-indent: 1.875rem;
+  margin-bottom: 1.5rem;
+}
+
+#testimonials blockquote p span {
+  font: 700 2.8rem serif;
+  position: absolute;
+  top: -.37rem;
+  left: -1.875rem;
+  color: var(--base-color);
+}
+
+#testimonials cite {
+  display: flex;
+  align-items: center;
+  font-style: normal; /** vai tirar o estilo italico que o cite tem*/
+}
+
+#testimonials cite img {
+  width: 2rem;
+  height: 2rem;
+  object-fit: cover;
+  clip-path: circle();
+  margin-right: 0.5rem;
+}
+
+/*? SWIPER */
+.swiper-slide {
+  height: auto;
+  padding: 4rem 1rem;
+}
+
+.swiper-pagination-bullet {
+  width: 0.75rem;
+  height: 0.75rem;
+}
+
+.swiper-pagination-bullet-active {
+  background: var(--base-color);
+}
+
+/*? CONTACT  */
+#contact .grid {
+  gap: 4rem;
+}
+
+#contact p {
+  margin-bottom: 2rem;
+}
+
+#contact .button i,
+#contact ul li i {
+  font-size: 1.5rem;
+  margin-right: 0.625rem;
+}
+
+#contact ul.grid {
+  gap: 2rem;
+}
+
+#contact ul li {
+  display: flex;
+  align-items: center;
+}
+
+#contact ul li i {
+  color: var(--base-color);
 }
