resposive - @media queries add

--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
   box-sizing: border-box;
 }
 
-a {
-  text-decoration: none;
+a { 
+ text-decoration: none;
 }
 
 ul {
@@ -33,6 +33,11 @@ img {
   --text-color: hsl(0 0% 46%);
   --text-color-light: hsl(0 0% 98%);
   --body-color: hsl(0 0% 98%);
+
+  --subtitle-font-size: 1rem;
+
+  --font-title: 'Roboto', sans-serif;
+  --font-body: 'Open Sans', sans-serif;
 }
 
 /*? BASE */
@@ -41,14 +46,14 @@ html {
 }
 
 body {
-  font: 400 1rem 'Open Sans', sans-serif;
+  font: 400 1rem var(--font-body);
   color: var(--text-color);
   background: var(--body-color);
   -webkit-font-smoothing: antialiased;
 }
 
 .title {
-  font: 700 1.875rem 'Roboto', sans-serif;
+  font: 700 1.875rem var(--font-title);
   color: var(--title-color);
   -webkit-font-smoothing: auto;
 }
@@ -63,7 +68,7 @@ body {
   padding: 0 2rem;
 
   border-radius: .25rem;
-  font: 500 1rem 'Open Sans', sans-serif;
+  font: 500 1rem var(--font-body); 
   transition: background 0.3s;
 }
 
@@ -100,11 +105,16 @@ body {
 }
 
 .section {
-  padding: 5rem 0;
+  padding: calc(5rem + var(--header-height)) 0;
+
 }
 
 .section .title {
   margin-bottom: 1rem;
+}
+
+.section .subtitle {
+  font-size: var(--subtitle-font-size);
 }
 
 .section header {
@@ -131,13 +141,10 @@ body {
   box-shadow: 0 0 12px rgba(0, 0, 0, .15);
 }
 
-main {
-  margin-top: calc(var(--header-height) + 1rem);
-}
 
 /*? LOGO  */
 .logo {
-  font: 700 1.31rem 'Roboto', sans-serif;
+  font: 700 1.31rem var(--font-body);
   color: var(--title-color);
 }
 
@@ -461,6 +468,10 @@ footer {
   background-color: var(--base-color);
 }
 
+footer.section {
+  padding: 4rem 0;
+}
+
 footer .logo {
   display: inline-block;
   margin-bottom: 1.5rem;
@@ -515,6 +526,120 @@ footer .social a:hover {
 }
 
 /** reponsivo  */
-@media (min-width: 1200px) {
+/* large device +1000 */
+@media (min-width: 1150px) {
+  .container {
+    max-width: 1120px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .section {
+    padding: 10rem 0;
+  }
+
+  .section header,
+  #testimonials header {
+    max-width: 32rem;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .button {
+    height: 3.125rem;
+  }
+
+  nav .menu {
+    opacity: 1;
+    visibility: visible;
+    top: 0;
+  }
+
+  nav .menu ul {
+    display: flex;
+    gap: 2rem;
+  }
+
+  nav .menu ul li a.title {
+    font: 400 1rem var(--font-body);
+  }
+
+  nav .icon-menu {
+    display: none;
+  }
+
+  main {
+    margin-top: calc(var(--header-height) + 1rem);
+  }
+
+  #home .container {
+    grid-auto-flow: column;
+    justify-content: space-between;
+    margin: 0 auto;
+  }
+
+  #home .image {
+    order: 1;
+  }
   
+  #home .text {
+    order: 0;
+    max-width: 24rem;
+    text-align: left;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  #about .container {
+    grid-auto-flow: column;
+  }
+
+  #about .container .image {
+    padding-right: 4rem;
+  }
+
+  .cards {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .card {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  #testimonials .container {
+    margin-left: auto;
+    margin-right: auto;
+  }
+ 
+  #contact .container {
+    grid-auto-flow: column;
+    align-items: center;
+  }
+
+  #contact .container .text {
+    max-width: 25rem;
+  }
+
+  footer .section {
+    padding: 3.81rem 0;
+  }
+
+  footer .container {
+    grid-auto-flow: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  footer .logo {
+    font-size: 2rem;
+  }
+}
+
+/* large devices +992 */
+@media (min-width: 992px) {
+  :root {
+    --subtitle-font-size: 1.125rem;
+  }
 }
